--- a/main.CSS
+++ b/main.CSS
@@ -10,4 +10,33 @@
   margin-left: 90px;
   margin-right: 90px;
 }
+
+.margin3{
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 100px;
+}
+}
+
+@media screen and (max-width: 767px) {
+
+.margin2{
+  margin-top: 50px;
+}
+}
+
+.heading{
+
+  background-color: #1a1a1a;
+  color: #ffffff;
+  text-align: center;
+  border: 2px;
+  border-style:dashed;
+  border-color: #fff;
+  border-radius: 10px;
+
+}
+
+#myslc{
+  background-color: #f1f1f1;
 }
