--- a/main.CSS
+++ b/main.CSS
@@ -12,9 +12,9 @@
 }
 
 .margin3{
-  margin-left: 300px;
-  margin-right: 300px;
-  margin-top: 100px;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-top: 50px;
 }
 }
 
@@ -30,11 +30,15 @@
   background-color: #1a1a1a;
   color: #ffffff;
   text-align: center;
-  border: 2px;
+  border: 12px;
   border-style:dashed;
   border-color: #fff;
   border-radius: 10px;
 
+}
+
+.head{
+  background-color: #fff;
 }
 
 #myslc{
