--- a/slc.css
+++ b/slc.css
@@ -9,7 +9,7 @@
 .info2 {
   margin-left: 90px;
   margin-right: 90px;
-  font-size: 30px;
+  font-size: 15px;
 }
 
 .margin3{
@@ -26,6 +26,9 @@
 }
 }
 
+h2  {
+  font-size: 30px;
+}
 .heading{
 
   background-color: #1a1a1a;
