--- a/slc.css
+++ b/slc.css
@@ -42,7 +42,10 @@
 
 }
 .links{
-  color: #ff4d4d;
+  color: #fff;
+  font-size: 30px;
+  background-color: #ff4d4d;
+  border-radius: 5px;
 }
 
 .head{
