--- a/slc.css
+++ b/slc.css
@@ -55,3 +55,11 @@
 #myslc{
   background-color: #f1f1f1;
 }
+
+
+.links2{
+  color: #fff;
+  font-size: 30px;
+  background-color: #3399FF;
+  border-radius: 5px;
+}
