--- a/CSS/events.css
+++ b/CSS/events.css
@@ -11,6 +11,8 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  -webkit-animation: fill-anim 0.5s ease forwards 2s;
+          animation: fill-anim 0.5s ease forwards 2s;
 }
 
 #events path {
