--- a/CSS/events.scss
+++ b/CSS/events.scss
@@ -21,12 +21,12 @@ body {
   top: 10vh;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation: fill-anim 0.5s ease forwards 2s;
 
   path {
     stroke-dasharray: 610px;
     stroke-dashoffset: 610px;
     animation: appear-anim 2s ease forwards;
-    // animation: fill-anim 0.5s ease forwards 2s;
   }
 }
 
