--- a/CSS/events.css
+++ b/CSS/events.css
@@ -1,13 +1,32 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  background-color: #f1f1f1;
-  color: #000000;
+  background-color: #b4b4b4;
+  color: #0d0d0d;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #events {
   position: absolute;
-  top: 10vh;
+  top: 5rem;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -39,7 +58,7 @@ body {
     fill: transparent;
   }
   to {
-    fill: #000000;
+    fill: #0d0d0d;
   }
 }
 
@@ -48,7 +67,222 @@ body {
     fill: transparent;
   }
   to {
-    fill: #000000;
+    fill: #0d0d0d;
   }
+}
+
+nav {
+  display: block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-align: center;
+  position: absolute;
+  top: 10rem;
+  left: 0;
+  right: 0;
+  -webkit-animation: nav-bg 0.5s ease forwards 2.5s;
+          animation: nav-bg 0.5s ease forwards 2.5s;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 3rem;
+  font-size: 1.5rem;
+  font-weight: 800;
+  position: relative;
+  top: 250%;
+  color: #b4b4b4;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) 3s both;
+          animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) 3s both;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #b4b4b4;
+}
+
+@-webkit-keyframes nav-bg {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: #0d0d0d;
+  }
+}
+
+@keyframes nav-bg {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: #0d0d0d;
+  }
+}
+
+@-webkit-keyframes fade-in-fwd {
+  0% {
+    -webkit-transform: translateZ(-80px);
+    transform: translateZ(-80px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-fwd {
+  0% {
+    -webkit-transform: translateZ(-80px);
+    transform: translateZ(-80px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container {
+  width: 1000px;
+  position: relative;
+  top: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .card {
+  position: relative;
+}
+
+.container .card .face {
+  width: 300px;
+  height: 200px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.container .card .face .face1 {
+  position: relative;
+  background-color: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1;
+  -webkit-transform: translateY(100px);
+          transform: translateY(100px);
+}
+
+.container .card .face .face1 .content {
+  opacity: 0.2;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.container .card .face .face1 .content img {
+  max-width: 100px;
+}
+
+.container .card .face .face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container .card .face .face2 {
+  position: relative;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  -webkit-transform: translateY(-100px);
+          transform: translateY(-100px);
+}
+
+.container .card .face .face2 .content p {
+  margin: 0;
+  padding: 0;
+}
+
+.container .card .face .face2 .content a {
+  margin: 15px 0 0;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333;
+}
+
+.container .card .face .face2 .content a:hover {
+  background: #333;
+  color: #fff;
+}
+
+.container .card:hover .face .face1 {
+  background: #ff0057;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.container .card:hover .face .face1 .content {
+  opacity: 1;
+}
+
+.container .card:hover .face .face2 {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
 }
 /*# sourceMappingURL=events.css.map */
