--- a/CSS/events.scss
+++ b/CSS/events.scss
@@ -1,5 +1,5 @@
 $colors: (
-  background: #b4b4b4,
+  background: #f1f1f1,
   text: #0d0d0d,
   primary: #1d70a2,
   accent: #2892d7
@@ -116,95 +116,96 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-// Cards for events with animations
-.container {
-  width: 1000px;
-  position: relative;
-  top: 20rem;
-  display: flex;
-  justify-content: space-between;
 
-  .card {
+  // Cards for events with animations
+  .container {
+    width: 1000px;
     position: relative;
+    top: 20rem;
+    display: flex;
+    justify-content: space-between;
 
-    .face {
-      width: 300px;
-      height: 200px;
-      transition: 0.5s;
+    .card {
+      position: relative;
 
-      .face1 {
-        position: relative;
-        background-color: #333;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1;
-        transform: translateY(100px);
+      .face {
+        width: 300px;
+        height: 200px;
+        transition: 0.5s;
 
-        .content {
-          opacity: 0.2;
-          transition: 0.5s;
+        .face1 {
+          position: relative;
+          background-color: #333;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 1;
+          transform: translateY(100px);
 
-          img {
-            max-width: 100px;
-          }
-          h3 {
-            margin: 10px 0 0;
-            padding: 0;
-            color: #fff;
-            text-align: center;
-            font-size: 1.5em;
+          .content {
+            opacity: 0.2;
+            transition: 0.5s;
+
+            img {
+              max-width: 100px;
+            }
+            h3 {
+              margin: 10px 0 0;
+              padding: 0;
+              color: #fff;
+              text-align: center;
+              font-size: 1.5em;
+            }
           }
         }
-      }
 
-      .face2 {
-        position: relative;
-        background-color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        box-sizing: border-box;
-        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
-        transform: translateY(-100px);
-        .content {
-          p {
-            margin: 0;
-            padding: 0;
-          }
+        .face2 {
+          position: relative;
+          background-color: #fff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
+          box-sizing: border-box;
+          box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+          transform: translateY(-100px);
+          .content {
+            p {
+              margin: 0;
+              padding: 0;
+            }
 
-          a {
-            margin: 15px 0 0;
-            display: inline-block;
-            text-decoration: none;
-            font-weight: 900;
-            color: #333;
-            padding: 5px;
-            border: 1px solid #333;
-          }
+            a {
+              margin: 15px 0 0;
+              display: inline-block;
+              text-decoration: none;
+              font-weight: 900;
+              color: #333;
+              padding: 5px;
+              border: 1px solid #333;
+            }
 
-          a:hover {
-            background: #333;
-            color: #fff;
+            a:hover {
+              background: #333;
+              color: #fff;
+            }
           }
         }
       }
     }
-  }
 
-  .card:hover {
-    .face {
-      .face1 {
-        background: #ff0057;
-        transform: translateY(0px);
-        .content {
-          opacity: 1;
+    .card:hover {
+      .face {
+        .face1 {
+          background: #ff0057;
+          transform: translateY(0px);
+          .content {
+            opacity: 1;
+          }
         }
-      }
-      .face2 {
-        transform: translateY(0px);
+        .face2 {
+          transform: translateY(0px);
+        }
       }
     }
   }
