--- a/CSS/events.scss
+++ b/CSS/events.scss
@@ -11,11 +11,10 @@ body {
     color: color(text);
 }
 
-#particles-js {
-    height: 100%;
-    background: color(background);
-}
-
+// #particles-js {
+//     height: 100%;
+//     background: color(text);
+// }
 // Events header animation
 header {
     display: flex;
