--- a/CSS/events.css
+++ b/CSS/events.css
@@ -1,8 +1,125 @@
+#animate-bg {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 40vh;
+  z-index: -10;
+}
+
+.box-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-animation: vertical 10s ease 3s infinite forwards;
+          animation: vertical 10s ease 3s infinite forwards;
+  z-index: inherit;
+}
+
+.box-area li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  height: 25px;
+  width: 25px;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-animation: rotation 20s linear infinite;
+          animation: rotation 20s linear infinite;
+  bottom: -150px;
+  z-index: -5;
+}
+
+.box-area li:nth-child(1) {
+  left: 86%;
+  width: 125px;
+  height: 125px;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+.box-area li:nth-child(2) {
+  left: 12%;
+  width: 55px;
+  height: 55px;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+.box-area li:nth-child(3) {
+  left: 70%;
+  width: 75px;
+  height: 75px;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+.box-area li:nth-child(4) {
+  left: 6%;
+  width: 25px;
+  height: 25px;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+.box-area li:nth-child(5) {
+  left: 46%;
+  width: 125px;
+  height: 125px;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+.box-area li:nth-child(6) {
+  left: 95%;
+  width: 15px;
+  height: 15px;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: translateY(0) rotate(0deg);
+            transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(-800px) rotate(360deg);
+            transform: translateY(-800px) rotate(360deg);
+    opacity: 0;
+  }
+}
+
+@keyframes rotation {
+  0% {
+    -webkit-transform: translateY(0) rotate(0deg);
+            transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(-800px) rotate(360deg);
+            transform: translateY(-800px) rotate(360deg);
+    opacity: 0;
+  }
+}
+
 body {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  background-color: #f1f1f1;
+  background-color: #d4d4d4;
   color: #0d0d0d;
 }
 
@@ -105,7 +222,7 @@ nav ul li {
   font-weight: 800;
   position: relative;
   top: 250%;
-  color: #f1f1f1;
+  color: #d4d4d4;
   padding: 0.5rem 1rem;
   margin: 0 1rem;
   -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) 3s both;
@@ -114,11 +231,11 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: #f1f1f1;
+  color: #d4d4d4;
 }
 
 nav ul li a:hover {
-  color: #3e64ff;
+  color: #2892d7;
 }
 
 @-webkit-keyframes nav-bg {
@@ -170,6 +287,10 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -179,6 +300,12 @@ main {
 }
 
 main .container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 1000px;
   position: relative;
   top: 15rem;
@@ -279,7 +406,7 @@ main .container .card .face2 .content a:hover {
 }
 
 main .container .card:hover .face1 {
-  background: #3e64ff;
+  background: #2892d7;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
 }
@@ -291,5 +418,9 @@ main .container .card:hover .face1 .content {
 main .container .card:hover .face2 {
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
+}
+
+.selected {
+  color: #2892d7;
 }
 /*# sourceMappingURL=events.css.map */
