--- a/CSS/events.css
+++ b/CSS/events.css
@@ -119,8 +119,10 @@ body {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  background-color: #d4d4d4;
   color: #0d0d0d;
+  background-color: #0026ff;
+  background-image: -webkit-gradient(linear, left bottom, right top, from(#006eff), to(#06d5f0));
+  background-image: linear-gradient(to top right, #006eff, #06d5f0);
 }
 
 header {
