--- a/CSS/events.css
+++ b/CSS/events.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 #animate-bg {
   padding: 0;
   margin: 0;
@@ -332,7 +336,7 @@ main .container .card .face {
 
 main .container .card .face1 {
   position: relative;
-  background-color: #fff;
+  background-color: #72c7ff;
   color: #000;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -381,8 +385,8 @@ main .container .card .face2 {
   padding: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-box-shadow: 0 20px 10px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 20px 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
   -webkit-transform: translateY(-100px);
           transform: translateY(-100px);
 }
@@ -408,7 +412,7 @@ main .container .card .face2 .content a:hover {
 }
 
 main .container .card:hover .face1 {
-  background: #2892d7;
+  background: #6455eb;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
 }
