--- a/CSS/events.css
+++ b/CSS/events.css
@@ -32,7 +32,7 @@ html {
   -webkit-animation: rotation 20s linear infinite;
           animation: rotation 20s linear infinite;
   bottom: -150px;
-  z-index: -5;
+  z-index: inherit;
 }
 
 .box-area li:nth-child(1) {
@@ -347,7 +347,7 @@ main .container .card .face1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 1;
+  z-index: 2;
   -webkit-transform: translateY(100px);
           transform: translateY(100px);
 }
@@ -372,6 +372,7 @@ main .container .card .face1 .content h3 {
 
 main .container .card .face2 {
   position: relative;
+  z-index: 1;
   background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
